Updates to chapters 2 and 3 of case study paper

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -17,14 +17,11 @@ We consider two types of LRPs based on two different metrics:
 
 While aggregate abundance-based LRPs are consistent with what is typically used for marine fish species, we propose that proportion-based LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's Wild Salmon Policy. 
 
-WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of CUs to date.  We demonstrate the application of the Pacific Salmon Status Scanner Tool (hereafter referred to as the 'Salmon Scanner') that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep). Applying this tool allows us to generate up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt et al., in review). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the Salmon Scanner better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the Salmon Scanner reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
+WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of CUs to date.  We demonstrate the application of the Pacific Salmon Status Scanner Tool (hereafter referred to as the 'Salmon Scanner') that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). Applying this tool allows us to generate up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt et al., in review). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the Salmon Scanner better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the Salmon Scanner reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
 
 When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review). While aggregate-abundance based LRPs can be used to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt et al. (in review))
 
-<!--CH: add mention of hatchery contribution
-MA Nov 29: "Yes, I think that most CUs in most years could be reported as PNI >0.72.
-The exception would be Lower Thompson, which had some pretty high CU level proportion of hatchery escapement prior 2006. Could be worth noting that Lower Thompson may have been at the PNI level of 0.5-0.72 between 1998-2005 but in recent years the PNI has been greater than 0.72 on average." 
--->
+We also maintain consistency with the WSP by only including populations without significant enhancement when evaluating CU and SMU status. Populations where production is dominated by hatchery-origin fish, defined as systems with Proportioante Natural Influence (PNI) estimates <0.5 [@withlerGeneticallyBasedTargets2018] are exlcuded from analyses. In addition, for systems where time-series of the proportion of hatchery marked fish on the spawning grounds are available, these proportions are used to develop time-series of natural-origin recruitment for benchmark estimation and time series of natural-origin spawners for status assessment against benchmarks.  
 
 
 ## PROPORTION-BASED LRPS
@@ -64,7 +61,7 @@ TO DO: Luke, can you please update this figure with updated SOTS decision tree.
 -->
 
 
-The Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a geometric mean) as a basis for comparison at each node of the decision tree, including when comparing against absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S\textsubscript{gen} or percentile), and abundance-based upper benchmarks (e.g., 0.8S\textsubscript{MSY} or percentile). Spawner abundances are also smoothed using generational averages prior to calculating trends in spawner abundance over time (Pestal et al., in prep).   
+The Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a geometric mean) as a basis for comparison at each node of the decision tree, including when comparing against absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S\textsubscript{gen} or percentile), and abundance-based upper benchmarks (e.g., 0.8S\textsubscript{MSY} or percentile). Spawner abundances are also smoothed using generational averages prior to calculating trends in spawner abundance over time (Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.])  
 
 
 ## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
