--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  word_document: default
+  html_document: default
+---
 # GUIDELINES FOR APPLYING LRPS {#guidelines}
 
 ## Stepwise approach for selecting LRPs
